--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,69 @@
-.App {
-  text-align: center;
+label {
+  display: inline;
 }
 
+form,
+.field {
+  display: inline;
+  margin-left: 20px;
+}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 15px;
+#search {
+  width: 40%;
+}
+
+.pinterentIcon {
+  display: 'inline';
+
+  width: 60%;
+}
+
+#divv {
+  display: 'inline';
+  width: 40%;
+  border: 0px;
+  margin: 0px;
+}
+
+#imageCard {
+  width: '100%';
+  height: 'fit-content';
+  border-radius: 8px;
+}
+
+#container{
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
+.my-masonry-grid {
+  display: -webkit-box; /* Not needed if autoprefixing */
+  display: -ms-flexbox; /* Not needed if autoprefixing */
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-left: -30px; /* gutter size offset */
+  width: auto;
+}
+.my-masonry-grid_column {
+  padding-left: 30px; /* gutter size */
+  background-clip: padding-box;
 }
 
+/* Style your items */
+.my-masonry-grid_column > div {
+  /* change div to reference your elements you put in <Masonry> */
+  background: grey;
+  margin-bottom: 30px;
+}
 
+/* Optional, different gutter size on mobile */
+@media (max-width: 800px) {
+  .my-masonry-grid {
+    margin-left: -15px; /* gutter size offset */
+  }
+  .my-masonry-grid_column {
+    padding-left: 15px; /* gutter size offset */
+  }
+  .my-masonry-grid_column > div {
+    margin-bottom: 15px; /* space between items */
+  }
+}
